--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -42,17 +42,17 @@
                 <h1 class="text-white ">Scholarships at edX</h1>
             </div>
             <div class="container justify-content-center" style="margin-top: 25px;">
+
                 <div class="container">
-                    <div class="container">
-                        <p class="text-white">edX’s mission is to reimagine education by increasing access to high-quality education for everyone, everywhere. With a global reach and learners in all 196 countries around the world, edX seeks to democratize education by providing
-                            first-rate curriculum to the world from top-tiered universities to all those who wish to learn. </p>
+                    <p class="text-white">edX’s mission is to reimagine education by increasing access to high-quality education for everyone, everywhere. With a global reach and learners in all 196 countries around the world, edX seeks to democratize education by providing
+                        first-rate curriculum to the world from top-tiered universities to all those who wish to learn. </p>
 
-                        <p class="text-white">While the majority of our courses are free to audit on edx.org, we have established a robust scholarship and financial assistance program to ensure all qualifying learners can afford to obtain verified credentials upon completion
-                            of our courses and programs. </p>
+                    <p class="text-white">While the majority of our courses are free to audit on edx.org, we have established a robust scholarship and financial assistance program to ensure all qualifying learners can afford to obtain verified credentials upon completion of
+                        our courses and programs. </p>
 
-                        <p class="text-white">To support our expanding scholarship program, edX is launching a $10M Access for All campaign to drastically increase the number of learners edX can help gain access to life changing education, especially during a time of economic
-                            struggle and job loss caused by the COVID-19 pandemic.</p>
-                    </div>
+                    <p class="text-white">To support our expanding scholarship program, edX is launching a $10M Access for All campaign to drastically increase the number of learners edX can help gain access to life changing education, especially during a time of economic
+                        struggle and job loss caused by the COVID-19 pandemic.</p>
+
                 </div>
             </div>
 
