--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <main>
 
-        <div class="container p-2" style="margin-top:125px; margin-bottom:100px;">
+        <div class="container" style="margin-top:125px; margin-bottom:100px;">
 
             <div class="container bg-primary">
-                <h1 class="h1 text-white text-center">Free Courses</h1>
+                <h2 class="h2 text-white text-center">Free Courses</h2>
             </div>
 
             <div class="row gy-5">
