--- a/index.html
+++ b/index.html
@@ -41,57 +41,82 @@
                 <h2 class="h2 text-white text-center">Free Courses</h2>
             </div>
 
-            <div class="row gy-5">
-                <div class="col-sm-4 ">
-                    <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="udemy-free-courses.html" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+            <div class="row">
+                <div class="col-sm-6" style="margin-top: 10px;">
+                    <div class="card bg-dark css-hover">
+                        <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
                 </div>
 
-                <div class="col-sm-4">
-                    <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="coursera-free-courses.html" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
-                </div>
-
-                <div class="col-sm-4">
-                    <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-10px;"><a href="edx-free-courses.html" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                <div class="col-sm-6" style="margin-top: 10px;">
+                    <div class="card bg-dark css-hover">
+                        <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
-                    <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="linkedIn-learning-free-courses.html" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                <div class="col-sm-6" style="margin-top: 10px;">
+                    <div class="card bg-dark css-hover">
+                        <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
                 </div>
 
-                <div class="col-sm-4">
-                    <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
-                </div>
-
-                <div class="col-sm-4">
-                    <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                <div class="col-sm-6">
+                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                        <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
-                    <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                <div class="col-sm-6" style="margin-top: 10px;">
+                    <div class="card bg-dark css-hover">
+                        <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
                 </div>
 
-                <div class="col-sm-4">
-                    <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-20px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
-                </div>
-
-                <div class="col-sm-4">
-                    <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-20px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                <div class="col-sm-6">
+                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                        <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <div class="row">
+                <div class="col-sm-6" style="margin-top: 10px;">
+                    <div class="card bg-dark css-hover">
+                        <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                        <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                        <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+
+                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                    </div>
+
+                </div>
+            </div>
+
+
 
 
     </main>
