--- a/header.html
+++ b/header.html
@@ -18,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav mx-auto">
-                <a class="nav-item nav-link active text-white css-hover" href="index.html"><b>Home</b></a>
-                <a class="nav-item nav-link text-white css-hover" href="#"><b>Free Courses</b></a>
+                <a class="nav-item nav-link active text-white css-hover" href="home.html"><b>Home</b></a>
+                <a class="nav-item nav-link text-white css-hover" href="index.html"><b>Free Courses</b></a>
                 <a class="nav-item nav-link text-white css-hover" href="#"><b>Contact</b></a>
                 <a class="nav-item nav-link text-white css-hover" href="#"><b>Donate</b></a>
             </div>
