--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
                 <div class="col-sm-6" style="margin-top: 10px;">
                     <div class="card bg-dark css-hover">
                         <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6" style="margin-top: 10px;">
                     <div class="card bg-dark css-hover">
                         <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -61,14 +65,18 @@
                 <div class="col-sm-6" style="margin-top: 10px;">
                     <div class="card bg-dark css-hover">
                         <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="edx-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="card bg-dark css-hover" style="margin-top: 10px;">
                         <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="linkedIn-learning-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,14 +85,18 @@
                 <div class="col-sm-6" style="margin-top: 10px;">
                     <div class="card bg-dark css-hover">
                         <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="google.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="card bg-dark css-hover" style="margin-top: 10px;">
                         <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="microsoft-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,14 +105,18 @@
                 <div class="col-sm-6" style="margin-top: 10px;">
                     <div class="card bg-dark css-hover">
                         <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="amazon-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="card bg-dark css-hover" style="margin-top: 10px;">
                         <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="cisco-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -110,7 +126,9 @@
                     <div class="card bg-dark css-hover" style="margin-top: 10px;">
                         <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
 
-                        <p class="text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        <div class="card-header bg-info">
+                            <p class="card-text text-white text-center"><a href="freecodecamp-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                        </div>
                     </div>
 
                 </div>
