--- a/amazon-free-courses.html
+++ b/amazon-free-courses.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkillsFree</title>
+    <title>SkillsFree | Amazon Free Courses</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,138 +16,62 @@
         <div w3-include-html="header.html"></div>
     </header>
 
-    <section class="container" style="margin-top: 100px;">
-
-        <div class="row gy-5 css-row">
-            <div class="col-sm-6">
-                <h1 class="css-text" style="margin-top: 100px; color: rgb(9, 218, 255);">SkillsFree</h1>
-                <p class="text-white"><i>Learn and earn certificates</i></p>
-
-                <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere for free with <b style="color: rgb(9, 218, 255);">SkillsFree</b> lists of courses from reputable learning platforms.</p>
-
-                <button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button>
-                <p class="text-white"><i>Your donations will be a gift for others.</i></p>
-            </div>
-            <div class="col-sm-6">
-                <img src="img/learning.svg" alt="" class="img-fluid css-img">
-            </div>
-        </div>
-    </section>
-
     <main>
+        <div class="container-fluid bg-primary p-1">
+            <section class="container" style="margin-top: 100px;">
+                <div class="row gy-5 css-row">
+                    <div class="col-sm-6">
+                        <h1 class="css-text" style=" color: rgb(9, 218, 255);">SkillsFree</h1>
+                        <p class="text-white"><i>Learn and earn certificates</i></p>
 
-        <div class="container" style="margin-top:125px; margin-bottom:100px;">
+                        <img src="img/amazon2x2-logo.png" alt="" class="img-fluid css-img" style="width: 100px; height:auto;">
 
-            <div class="container bg-primary">
-                <h2 class="h2 text-white text-center">Free Courses</h2>
+                        <p class="text-white mx-auto d-block" style="margin-top: -30px;">AWS Training and Certification helps you build and validate your skills so you can get more out of the cloud. ... Whether you are just starting out, building on existing IT skills, or sharpening your cloud knowledge, AWS Training
+                            and Certification can help you be more effective and do more in the cloud.</p>
+
+                        <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
+                        <p class="text-white"><i>Your donations will be a gift for others.</i></p>
+                    </div>
+                    <div class="col-sm-6">
+                        <img src="img/online-learning.svg" alt="" class="img-fluid mx-auto d-block css-img">
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <section class="container" style="margin-top:170px; margin-bottom: 100px;">
+            <div class="container bg-warning p-1">
+                <h2 class="text-center text-white">Amazon Free Courses</h2>
             </div>
 
-            <div class="row">
-                <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
-                        <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
+            <!-- google analytics -->
+            <div class="container" style="margin-top:50px;">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img src="img/aws-training-certificationcertificate.jpg" class="img-fluid mx-auto d-block" alt="">
                     </div>
-                </div>
 
-                <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
-                        <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <div class="col-sm-6">
+                        <h2 class="text-warning text-center">Build your future in the AWS Cloud.</h2>
 
-            <div class="row">
-                <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
-                        <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="edx-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
-                        <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="linkedIn-learning-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        <p class="text-white">The only set of training programs and offerings built by the experts at AWS.</p>
 
-            <div class="row">
-                <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
-                        <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="google.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
-                        <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="microsoft-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
+                        <button class="btn bg-warning"><a href="https://www.aws.training/Dashboard/?cta=tctopbanner" class="text-dark text-decoration-none">Enroll Now!</a></button>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
-                        <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="amazon-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
-                        <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="cisco-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
-                        <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-
-                        <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="#" class="text-decoration-none text-white">View Courses</a></p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-
-
-
+        </section>
     </main>
 
     <footer>
         <div w3-include-html="footer.html"></div>
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js "></script>
     <script src="js/header.js "></script>
     <script>
         includeHTML();
