--- a/microsoft-free-courses.html
+++ b/microsoft-free-courses.html
@@ -50,12 +50,12 @@
                     </div>
 
                     <div class="col-sm-6">
-                        <h2 class="text-warning text-center">Micorosoft Learn</h2>
-                        <h3 class="text-white" style="margin-top: 50px;">Build your future in the AWS Cloud.</h3>
+                        <h2 class="text-warning text-center">WELCOME TO MICROSOFT LEARN</h2>
+                        <h3 class="text-white" style="margin-top: 50px;">Discover your path</h3>
 
-                        <p class="text-white">The only set of training programs and offerings built by the experts at AWS.</p>
+                        <p class="text-white">Whether you're just starting or an experienced professional, our hands-on approach helps you arrive at your goals faster, with more confidence and at your own pace.</p>
 
-                        <button class="btn bg-warning"><a href="https://www.aws.training/" class="text-dark text-decoration-none">Enroll Now!</a></button>
+                        <button class="btn bg-warning"><a href="https://docs.microsoft.com/en-us/learn/" class="text-dark text-decoration-none">Enroll Now!</a></button>
                     </div>
                 </div>
             </div>
