--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
+                    <div class="card bg-dark">
                         <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="udemy-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
+                    <div class="card bg-dark">
                         <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="coursera-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -63,7 +63,7 @@
 
             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
+                    <div class="card bg-dark">
                         <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="edx-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                    <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="linkedIn-learning-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -83,7 +83,7 @@
 
             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
+                    <div class="card bg-dark">
                         <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="google.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                    <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="microsoft-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -103,7 +103,7 @@
 
             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
-                    <div class="card bg-dark css-hover">
+                    <div class="card bg-dark">
                         <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="amazon-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                    <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
                             <p class="card-text text-white text-center"><a href="cisco-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
@@ -123,7 +123,7 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="card bg-dark css-hover" style="margin-top: 10px;">
+                    <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
 
                         <div class="card-header bg-info">
