--- a/udemy-free-courses.html
+++ b/udemy-free-courses.html
@@ -17,24 +17,26 @@
     </header>
 
     <main>
-        <section class="container" style="margin-top: 100px;">
-            <div class="row gy-5 css-row">
-                <div class="col-sm-6">
-                    <h1 class="css-text" style=" color: rgb(9, 218, 255);">SkillsFree</h1>
-                    <p class="text-white"><i>Learn and earn certificates</i></p>
+        <div class="container-fluid bg-primary p-1">
+            <section class="container" style="margin-top: 100px;">
+                <div class="row gy-5 css-row">
+                    <div class="col-sm-6">
+                        <h1 class="css-text" style=" color: rgb(9, 218, 255);">SkillsFree</h1>
+                        <p class="text-white"><i>Learn and earn certificates</i></p>
 
-                    <img src="img/udemy2x2-logo.png" alt="" class="img-fluid css-img" style="width: 100px; height:auto;">
+                        <img src="img/udemy2x2-logo.png" alt="" class="img-fluid css-img" style="width: 100px; height:auto;">
 
-                    <p class="text-white mx-auto d-block" style="margin-top: -30px;">Udemy is the leading global marketplace for teaching and learning, connecting millions of students to the skills they need to succeed.</p>
+                        <p class="text-white mx-auto d-block" style="margin-top: -30px;">Udemy is the leading global marketplace for teaching and learning, connecting millions of students to the skills they need to succeed.</p>
 
-                    <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
-                    <p class="text-white"><i>Your donations will be a gift for others.</i></p>
+                        <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
+                        <p class="text-white"><i>Your donations will be a gift for others.</i></p>
+                    </div>
+                    <div class="col-sm-6">
+                        <img src="img/online-learning.svg" alt="" class="img-fluid mx-auto d-block css-img">
+                    </div>
                 </div>
-                <div class="col-sm-6">
-                    <img src="img/online-learning.svg" alt="" class="img-fluid mx-auto d-block css-img">
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
 
         <section class="container" style="margin-top:170px; margin-bottom: 100px;">
             <div class="card" style="background-color: #343a40;">
