--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -38,7 +38,7 @@
         </section>
         <div class="container" style="margin-top:170px;">
 
-            <div class="container bg-primary p-2">
+            <div class="container p-2" style="background-color: black;">
                 <h1 class="text-white ">Scholarships at edX</h1>
             </div>
             <div class="container justify-content-center" style="margin-top: 25px;">
@@ -73,7 +73,7 @@
                             <div class="col-sm-10">
                                 <p class="text-white">The Macquarie Group Scholarship Program: In the wake of COVID-19, Macquarie Group has established this scholarship to support economic recovery by assisting learners seeking skills-based programming on edX. Preference will
                                     be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
-                                <a href="https://www.edx.org/macquarie-scholarship-application" class="text-decoration-none"> <button class="btn btn-info mx-auto d-block text-white" style="margin-top:5px;"><b>Apply now</b></button></a>
+                                <a href="https://www.edx.org/macquarie-scholarship-application" class="text-decoration-none"> <button class="btn mx-auto d-block text-white" style="margin-top:5px; background-color: black;"><b>Apply now</b></button></a>
 
 
                                 <!-- <span style=" color: rgb(4, 217, 255);"> <b>Apply to The Macquarie Scholarship Program</b></span> -->
