--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <title>SkillsFree</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 </head>
 
 <body class="bg-dark">
@@ -15,7 +16,7 @@
         <div w3-include-html="header.html"></div>
     </header>
 
-    <section class="container" style="margin-top: 100px;">
+    <section class="container p-1" style="margin-top: 100px;">
 
         <div class="row gy-5 css-row">
             <div class="col-sm-6">
@@ -48,13 +49,28 @@
 
                 <div class="container">
                     <h3 class="h3 text-white text-center" style="margin-bottom: 60px;">Contact Info</h3>
-
-                    <ul class="text-center text-white" style="margin: 0;
-                    padding: 0;">
-                        <li style="display: inline; list-style: none;margin-right: 10px;color: #fff;"><i class="im im-phone"> Tel No.:</i> 09661535417</li>
-                        <li style="display: inline;list-style: none;margin-right: 10px;color: #fff;"><i class="im im-mail"> Email: </i> tephdytech@gmail.com</li>
-                    </ul>
                 </div>
+            </div>
+        </div>
+
+        <div class="container-fluid bg-primary p-1" style="width: 100%; overflow: hidden;">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h5 class="text-white" style="margin-top: 90px;"> Phone Number:</h5>
+                        <span><h1 class="text-white">09661535417</h1></span>
+                        <br>
+                        <h5 class="text-white"> Email:</h5>
+                        <span><h1 class="text-white">skillsfree.unli@gmail.com</h1></span>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <img src="img/undraw_contact_us_15o2.svg" class="img-fluid" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
