--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <p class="text-white"><i>Your donations will be a gift for others.</i></p>
             </div>
             <div class="col-sm-6">
-                <img src="img/map.svg" alt="" class="img-fluid css-img">
+                <img src="img/undraw_contact_us_15o2.svg" alt="" class="img-fluid css-img">
             </div>
         </div>
     </section>
@@ -42,7 +42,7 @@
                 <h2 class="h2 text-white text-center">Contact</h2>
             </div>
 
-            <div class="container-fluid">
+            <!-- <div class="container-fluid">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d241.94904530741775!2d122.18437565217434!3d14.007058537508946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sBrgy.%204%20oliveros%20St.%20Quezon%2C%20Quezon!5e0!3m2!1sen!2sph!4v1617033114000!5m2!1sen!2sph"
                     width="600" height="450" style="border:5px solid rgb(8, 151, 151); width: 100%; margin-bottom: 60px;" allowfullscreen="" loading="lazy" class="glowing">
                 </iframe>
@@ -51,26 +51,23 @@
                     <h3 class="h3 text-white text-center" style="margin-bottom: 60px;">Contact Info</h3>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="container-fluid bg-primary p-1" style="width: 100%; overflow: hidden;">
+            <!-- <div class="container-fluid bg-primary p-1" style="width: 100%; overflow: hidden;">
 
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h5 class="text-white" style="margin-top: 90px;"> Phone Number:</h5>
-                        <span><h1 class="text-white">09661535417</h1></span>
-                        <br>
-                        <h5 class="text-white"> Email:</h5>
-                        <span><h1 class="text-white">skillsfree.unli@gmail.com</h1></span>
+                        <p class="text-white"><b>Phone Number:</b> <span>09661535417</span></p>
+                        <p class="text-white"><b>Email:</b> <span>skillsfree.unli@gmail.com</span></p>
                     </div>
 
                     <div class="col-sm-6">
-                        <img src="img/undraw_contact_us_15o2.svg" class="img-fluid" alt="">
+                        <img src="img/undraw_contact_us_15o2.svg" class="img-fluid" style="width: 300px;" alt="">
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
