--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                 <h2 class="h2 text-white text-center">Contact</h2>
             </div>
 
-            <!-- <div class="container-fluid">
+            <div class="container-fluid">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d241.94904530741775!2d122.18437565217434!3d14.007058537508946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sBrgy.%204%20oliveros%20St.%20Quezon%2C%20Quezon!5e0!3m2!1sen!2sph!4v1617033114000!5m2!1sen!2sph"
                     width="600" height="450" style="border:5px solid rgb(8, 151, 151); width: 100%; margin-bottom: 60px;" allowfullscreen="" loading="lazy" class="glowing">
                 </iframe>
@@ -51,9 +51,9 @@
                     <h3 class="h3 text-white text-center" style="margin-bottom: 60px;">Contact Info</h3>
                 </div>
             </div>
-        </div> -->
+        </div>
 
-            <!-- <div class="container-fluid bg-primary p-1" style="width: 100%; overflow: hidden;">
+        <!-- <div class="container-fluid bg-primary p-1" style="width: 100%; overflow: hidden;">
 
             <div class="container">
                 <div class="row">
