--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div w3-include-html="header.html"></div>
     </header>
 
-    <section class="container p-1" style="margin-top: 100px;">
+    <section class="container" style="margin-top: 100px;">
 
         <div class="row gy-5 css-row">
             <div class="col-sm-6">
