--- a/contact.html
+++ b/contact.html
@@ -46,28 +46,25 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d241.94904530741775!2d122.18437565217434!3d14.007058537508946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sBrgy.%204%20oliveros%20St.%20Quezon%2C%20Quezon!5e0!3m2!1sen!2sph!4v1617033114000!5m2!1sen!2sph"
                     width="600" height="450" style="border:5px solid rgb(8, 151, 151); width: 100%; margin-bottom: 60px;" allowfullscreen="" loading="lazy" class="glowing">
                 </iframe>
-
-                <div class="container">
-                    <h3 class="h3 text-white text-center" style="margin-bottom: 60px;">Contact Info</h3>
-                </div>
             </div>
         </div>
 
-        <!-- <div class="container-fluid bg-primary p-1" style="width: 100%; overflow: hidden;">
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p class="text-white"><b>Phone Number:</b> <span>09661535417</span></p>
-                        <p class="text-white"><b>Email:</b> <span>skillsfree.unli@gmail.com</span></p>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <img src="img/undraw_contact_us_15o2.svg" class="img-fluid" style="width: 300px;" alt="">
-                    </div>
+        <div class="container" style="margin-bottom: 100px;">
+            <div class="card bg-dark">
+                <div class="card-header" style="background-color: rgb(9, 218, 255);">
+                    <p class="card-title text-white"><b>Phone Number:</b></p>
                 </div>
+                <div class="card-body">
+                    <h3 class="card=-text text-white">09661535417</h3>
+                </div>
+                <div class="card-header" style="background-color: rgb(9, 218, 255);">
+                    <p class="card-title text-white"><b>Email:</b></p>
+                </div>
+                <div class="card-body">
+                    <h3 class="card=-text text-white">skillsfree.unli@gmail.com</div>
             </div>
-        </div> -->
+        </div>
+        </div>
 
 
 
