--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <title>SkillsFree | Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/Great-idea-flatline.svg">
 
     <style>
         @media(max-width:700px) {
