--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
                 <a class="nav-item nav-link active text-white css-hover" href="home.html"><b>Home</b></a>
                 <a class="nav-item nav-link text-white css-hover" href="index.html"><b>Free Courses</b></a>
                 <a class="nav-item nav-link text-white css-hover" href="contact.html"><b>Contact</b></a>
-                <a class="nav-item nav-link text-white css-hover" href="#"><b>Donate</b></a>
+                <a class="nav-item nav-link text-white css-hover" href="donate.html"><b>Donate</b></a>
             </div>
         </div>
     </nav>
