--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <p class="text-white"><i>Your donations will be a gift for others.</i></p>
             </div>
             <div class="col-sm-6">
-                <img src="img/undraw_contact_us_15o2.svg" alt="" class="img-fluid css-img">
+                <img src="img/undraw_contact_us_15o2.svg" alt="" class="img-fluid css-img" style="margin-top: 100px;">
             </div>
         </div>
     </section>
