--- a/donate.html
+++ b/donate.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-sm-6">
 
-                    <h1 class="text-white" style="font-size: 52px;">"When you learn, teach. When you get, give."</h1>
+                    <h1 class="text-white" style="font-size: 52px; margin-top: 50px;">"When you learn, teach. When you get, give."</h1>
                     <p class="text-white"><i>-Maya Angelou</i></p>
                 </div>
 
