--- a/donate.html
+++ b/donate.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <img src="img/Money-transfer_Flatline.svg" alt="">
+                    <img src="img/Money-transfer_Flatline.svg" class="img-fluid" alt="">
                 </div>
             </div>
 
