new link for linkedin learning

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="card bg-dark" style="margin-top: 10px;">
                         <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
                         <div class="card-header bg-info">
-                            <p class="card-text text-white text-center"><a href="linkedIn-learning-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
+                            <p class="card-text text-white text-center"><a href="https://tephdy.github.io/SkillsFree/linkedIn-learning-free-courses.html" class="text-decoration-none text-white">View Courses</a></p>
                         </div>
                     </div>
                 </div>
