donate link added

--- a/cisco-free-courses.html
+++ b/cisco-free-courses.html
@@ -29,7 +29,7 @@
                     <p class="text-white mx-auto d-block" style="margin-top: -20px;">Cisco Systems, Inc. is an American multinational technology conglomerate headquartered in San Jose, California, in the center of Silicon Valley. Cisco develops, manufactures and sells networking hardware, software, telecommunications
                         equipment and other high-technology services and products.</p>
 
-                    <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
+                    <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
