donate link added

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
                 <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere for free with <b style="color: rgb(9, 218, 255);">SkillsFree</b> lists of courses from reputable learning platforms.</p>
 
-                <button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button>
+                <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                 <p class="text-white"><i>Your donations will be a gift for others.</i></p>
             </div>
             <div class="col-sm-6">
