donate link added

--- a/linkedIn-learning-free-courses.html
+++ b/linkedIn-learning-free-courses.html
@@ -29,7 +29,7 @@
                     <p class="text-white mx-auto d-block" style="margin-top: -30px;"><a href="https://www.linkedin.com/learning/" class="text-decoration-none" style=" color: rgb(9, 218, 255);">LinkedIn Learning</a> is an American website offering video courses taught by industry experts in software, creative, and business
                         skills. It is a subsidiary of LinkedIn. All the courses on LinkedIn fall into 3 categories: Business, Creative, and Technology</p>
 
-                    <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
+                    <a href="donate.html"><button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button></a>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
