--- a/coursera-free-courses.html
+++ b/coursera-free-courses.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=607a43f99f1eca0018930c70&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body class="bg-dark">
@@ -41,6 +43,10 @@
             <div class="card" style="background-color: #343a40;">
                 <div class="card-header">
                     <h2 class="card-title" style=" color: rgb(9, 218, 255);">Coursera Free Certificate Courses</h2>
+                </div>
+
+                <div class="card-header">
+                    <div class="sharethis-inline-share-buttons"></div>
                 </div>
 
                 <div class="card-body">
