shareable link added

--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=607a43f99f1eca0018930c70&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body class="bg-dark">
@@ -75,6 +76,8 @@
                                 <p class="text-white">The Macquarie Group Scholarship Program: In the wake of COVID-19, Macquarie Group has established this scholarship to support economic recovery by assisting learners seeking skills-based programming on edX. Preference will
                                     be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
                                 <a href="https://www.edx.org/macquarie-scholarship-application" class="text-decoration-none"> <button class="btn mx-auto d-block text-white" style="margin-top:5px; background-color: black;"><b>Apply now</b></button></a>
+
+                                <div class="sharethis-inline-share-buttons" style="margin-top: 50px;"></div>
 
 
                                 <!-- <span style=" color: rgb(4, 217, 255);"> <b>Apply to The Macquarie Scholarship Program</b></span> -->
