--- a/google.html
+++ b/google.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=607a43f99f1eca0018930c70&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body class="bg-dark">
@@ -44,6 +45,7 @@
 
             <!-- google analytics -->
             <div class="container" style="margin-top:50px;">
+                <div class="sharethis-inline-share-buttons" style="margin-bottom: 50px;"></div>
                 <div class="row">
                     <div class="col-sm-6">
                         <img src="img/google-analytic-cert.png" class="img-fluid mx-auto d-block" alt="">
