shareable link added

--- a/linkedIn-learning-free-courses.html
+++ b/linkedIn-learning-free-courses.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=607a43f99f1eca0018930c70&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body class="bg-dark">
@@ -42,6 +43,9 @@
             <div class="card" style="background-color: #343a40;">
                 <div class="card-header">
                     <h2 class="card-title" style=" color: rgb(9, 218, 255);">LinkedIn Learning Paths with Free Certificates</h2>
+                </div>
+                <div class="card-header">
+                    <div class="sharethis-inline-share-buttons"></div>
                 </div>
 
                 <div class="card-body">
@@ -780,22 +784,6 @@
                             <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;">
                                 <a href="https://linkedin-learning.pxf.io/c/259799/465847/8005?u=https%3A%2F%2Fwww.linkedin.com%2Flearning%2Fwriting-in-plain-language" class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Writing in Plain Language</a>
                             </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                         </ul>
                     </ul>
