--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=607a43f99f1eca0018930c70&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body class="bg-dark">
@@ -41,6 +42,7 @@
             <div class="container bg-primary">
                 <h2 class="h2 text-white text-center">Free Courses</h2>
             </div>
+            <div class="sharethis-inline-share-buttons" style="margin: 50px 0 50px 0;"></div>
 
             <div class="row">
                 <div class="col-sm-6" style="margin-top: 10px;">
