--- a/microsoft-free-courses.html
+++ b/microsoft-free-courses.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=607a43f99f1eca0018930c70&product=inline-share-buttons" async="async"></script>
 </head>
 
 <body class="bg-dark">
@@ -56,6 +57,8 @@
                         <p class="text-white">Whether you're just starting or an experienced professional, our hands-on approach helps you arrive at your goals faster, with more confidence and at your own pace.</p>
 
                         <button class="btn bg-warning"><a href="https://docs.microsoft.com/en-us/learn/" class="text-dark text-decoration-none">Enroll Now!</a></button>
+
+                        <div class="sharethis-inline-share-buttons" style="margin-top: 50px;"></div>
                     </div>
                 </div>
             </div>
