--- a/home.html
+++ b/home.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
+    <!-- Start of WebFreeCounter Code -->
+    <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=geuoxfqa&nd=6&style=8" border="0" alt="visitor counter"></a>
+    <!-- End of WebFreeCounter Code -->
 
     <style>
         @media(max-width:700px) {
