visitor hit counter added

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Great-idea-flatline.svg">
     <!-- Start of WebFreeCounter Code -->
-    <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=geuoxfqa&nd=6&style=8" border="0" alt="visitor counter"></a>
+    <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvoxfqn&nd=6&style=8" border="0" alt="visitor counter"></a>
     <!-- End of WebFreeCounter Code -->
 
     <style>
