--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2 class="text-white font-weight-bold" style=" font-size: 52px; margin-top:100px;">Learn on your own phase</h2>
+                            <h2 class="text-white font-weight-bold" style=" font-size: 52px; margin-top:100px;">Learn on your own pace</h2>
                         </div>
                         <div class="col-sm-6">
                             <img src="img/online-learning.svg" alt="" class="img-fluid " style="height:350px; ">
